--- a/templates/index.html
+++ b/templates/index.html
@@ -25,125 +25,84 @@
 
     <!--====== Line Icons css ======-->
     <link rel="stylesheet" href="/static/css/lineicons.css" />
-
-    <!--====== Tiny Slider css ======-->
-    <link rel="stylesheet" href="/static/css/tiny-slider.css" />
-
-    <!--====== gLightBox css ======-->
-    <link rel="stylesheet" href="/static/css/glightbox.min.css" />
-
-    <link rel="stylesheet" href="/static/style.css" />
   </head>
 
-  <body>
+  <body class="bg-light">
     <!--====== NAVBAR NINE PART START ======-->
 
-    <section class="navbar-area navbar-nine">
+    <nav class="navbar navbar-dark navbar-expand-sm bg-dark fixed-top">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <nav class="navbar navbar-expand-lg">
-              <a class="navbar-brand" href="index.html">
-                <!-- <img src="assets/images/white-logo.svg" alt="Logo" /> -->
-                <h2 style="color: white">Epilepsy Checker</h2>
-              </a>
-
-              <div
-                class="collapse navbar-collapse sub-menu-bar"
-                id="navbarNine"
-              >
-                <ul class="navbar-nav me-auto">
-                  <!-- <li class="nav-item">
-                    <a class="page-scroll active" href="#hero-area">Home</a>
-                  </li> -->
-                </ul>
-              </div>
-            </nav>
-            <!-- navbar -->
-          </div>
-        </div>
-        <!-- row -->
+        <a href="/" class="navbar-brand">
+          <i class="fas fa-blog"></i> &nbsp; Epilepsy Checker
+        </a>
       </div>
-      <!-- container -->
-    </section>
+    </nav>
 
     <!-- Start header Area -->
-    <section id="hero-area" class="header-area header-eight">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-6 col-md-12 col-12">
-            <div class="header-content">
-              <h1></h1>
-              <p>Upload a picture image to check whether its ictal or not</p>
-              <div class="button">
-                <form
-                  id="upload-form"
-                  method="post"
-                  enctype="multipart/form-data"
-                >
-                  <input
-                    type="file"
-                    name="image"
-                    id="image-input"
-                    class="form-control-file"
-                    accept=".png, .jpg, .jpeg"
-                  />
-                </form>
-                <div
-                  class="glightbox video-button"
-                  id="predict-btn"
-                  style="padding: 50px"
-                >
-                  <span class="btn icon-btn rounded-full">
-                    <i class="lni lni-play"></i>
-                  </span>
-                  <span class="text">Check Now</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-12 col-12">
-            <div class="header-image">
-              <img
-                id="imageWidget"
-                src="/static//images/up_icon.png"
-                alt=""
-                style="width: 400px; height: 400px"
+    <div class="container mt-5 pt-5">
+      <div class="row align-items-center">
+        <div class="col-lg-6 col-md-12 col-12">
+          <div class="header-content shadow p-3 mb-5 bg-white rounded">
+            <p>Upload a picture image to check whether its ictal or not</p>
+
+            <form id="upload-form" method="post" enctype="multipart/form-data">
+              <input
+                type="file"
+                name="image"
+                id="image-input"
+                class="form-control-file"
+                accept=".png, .jpg, .jpeg"
               />
+            </form>
+            <div
+              class="glightbox video-button"
+              id="predict-btn"
+              style="padding: 20px"
+            >
+              <span class="btn icon-btn bg-dark rounded-circle">
+                <i class="lni lni-play" style="color: white"></i>
+              </span>
+              <span class="text">Check Now</span>
             </div>
           </div>
         </div>
-
-        <div id="loading">
-          <center>
-            <div class="spinner-grow spinner-grow-sm text-success"></div>
-            <div class="spinner-grow spinner-grow-sm text-info"></div>
-            <div class="spinner-grow spinner-grow-sm text-success"></div>
-            <div class="spinner-grow spinner-grow-sm text-info"></div>
-            <div class="spinner-grow spinner-grow-sm text-success"></div>
-            <div class="spinner-grow spinner-grow-sm text-info"></div>
-            <div class="spinner-grow spinner-grow-sm text-success"></div>
-            <div class="spinner-grow spinner-grow-sm text-info"></div>
-            <div class="spinner-grow spinner-grow-sm text-success"></div>
-            <div class="spinner-grow spinner-grow-sm text-info"></div>
-            <div class="spinner-grow spinner-grow-sm text-success"></div>
-            <div class="spinner-grow spinner-grow-sm text-info"></div>
-            <div class="spinner-grow spinner-grow-sm text-success"></div>
-            <div class="spinner-grow spinner-grow-sm text-info"></div>
-          </center>
-        </div>
-
         <div
-          id="result"
-          style="
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 50px;
-          "
-        ></div>
+          class="col-lg-6 col-md-12 col-12 shadow-lg p-3 mb-5 bg-white rounded d-flex justify-content-center align-items-center"
+        >
+          <div class="header-image">
+            <img
+              id="imageWidget"
+              src="/static//images/up_icon.png"
+              alt=""
+              style="width: 400px; height: 400px"
+            />
+          </div>
+        </div>
       </div>
-    </section>
+
+      <div id="loading">
+        <center>
+          <div class="spinner-grow spinner-grow-sm text-success"></div>
+          <div class="spinner-grow spinner-grow-sm text-info"></div>
+          <div class="spinner-grow spinner-grow-sm text-success"></div>
+          <div class="spinner-grow spinner-grow-sm text-info"></div>
+          <div class="spinner-grow spinner-grow-sm text-success"></div>
+          <div class="spinner-grow spinner-grow-sm text-info"></div>
+          <div class="spinner-grow spinner-grow-sm text-success"></div>
+          <div class="spinner-grow spinner-grow-sm text-info"></div>
+          <div class="spinner-grow spinner-grow-sm text-success"></div>
+          <div class="spinner-grow spinner-grow-sm text-info"></div>
+          <div class="spinner-grow spinner-grow-sm text-success"></div>
+          <div class="spinner-grow spinner-grow-sm text-info"></div>
+          <div class="spinner-grow spinner-grow-sm text-success"></div>
+          <div class="spinner-grow spinner-grow-sm text-info"></div>
+        </center>
+      </div>
+      <div
+        id="result"
+        style="display: flex; justify-content: center; align-items: center"
+      ></div>
+    </div>
     <!-- End header Area -->
 
     <!--====== js ======-->
