added model and styles

--- a/templates/demo.html
+++ b/templates/demo.html
@@ -39,7 +39,7 @@
             <nav class="navbar navbar-expand-lg">
               <a class="navbar-brand" href="index.html">
                 <!-- <img src="assets/images/white-logo.svg" alt="Logo" /> -->
-                <h2 style="color: white">Epilepsy Checker</h2>
+                <h2 style="color: white">Voice Authentication Tool</h2>
               </a>
 
               <div
@@ -68,7 +68,7 @@
           <div class="col-lg-6 col-md-12 col-12">
             <div class="header-content">
               <h1></h1>
-              <p>Upload a picture image to check whether its ictal or not</p>
+              <p>Upload an audio file to determine whether its genuine or a spoof:</p>
               <div class="button">
                 <form
                   id="upload-form"
