--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     />
 
     <!--====== Title ======-->
-    <title>Epilepsy Checker</title>
+    <title>VAC</title>
 
     <!--====== Favicon Icon ======-->
     <link
@@ -19,6 +19,10 @@
       href="/static/images/favicon.svg"
       type="image/svg"
     />
+
+    <link rel="stylesheet" href="/static/css/reset.css" />
+    <link rel="stylesheet" href="/static/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="/static/css/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--====== Bootstrap css ======-->
     <link rel="stylesheet" href="/static/css/bootstrap.min.css" />
@@ -33,7 +37,7 @@
     <nav class="navbar navbar-dark navbar-expand-sm bg-dark fixed-top">
       <div class="container">
         <a href="/" class="navbar-brand">
-          <i class="fas fa-blog"></i> &nbsp; Epilepsy Checker
+          <i class="fas fa-blog"></i> &nbsp; Voice Authenticity Checker
         </a>
       </div>
     </nav>
@@ -43,7 +47,10 @@
       <div class="row align-items-center">
         <div class="col-lg-6 col-md-12 col-12">
           <div class="header-content shadow p-3 mb-5 bg-white rounded">
-            <p>Upload a picture image to check whether its ictal or not</p>
+            <p>
+              Upload an audio file to check whether the audio is genuine or a
+              spoof:
+            </p>
 
             <form id="upload-form" method="post" enctype="multipart/form-data">
               <input
@@ -51,9 +58,15 @@
                 name="image"
                 id="image-input"
                 class="form-control-file"
-                accept=".png, .jpg, .jpeg"
               />
             </form>
+
+            <div style="padding: 15px">
+              <audio controls id="audio-container">
+                <!-- <source id="audio-src" src="/static/audio/D_1001447.wav"  type="audio/mpeg">
+                  Your browser does not support the audio element. -->
+              </audio>
+            </div>
             <div
               class="glightbox video-button"
               id="predict-btn"
@@ -64,18 +77,75 @@
               </span>
               <span class="text">Check Now</span>
             </div>
+
+            <div id="container-record">
+              <div class="audio-recording-container">
+                <h1 class="title">Or record voice</h1>
+                <i
+                  class="start-recording-button fa fa-microphone"
+                  aria-hidden="true"
+                ></i>
+                <div class="recording-contorl-buttons-container hide">
+                  <i
+                    class="cancel-recording-button fa fa-times-circle-o"
+                    aria-hidden="true"
+                  ></i>
+                  <div class="recording-elapsed-time">
+                    <i
+                      class="red-recording-dot fa fa-circle"
+                      aria-hidden="true"
+                    ></i>
+                    <p class="elapsed-time"></p>
+                  </div>
+                  <i
+                    class="stop-recording-button fa fa-stop-circle-o"
+                    aria-hidden="true"
+                  ></i>
+                </div>
+                <div class="text-indication-of-audio-playing-container">
+                  <p class="text-indication-of-audio-playing hide">
+                    Audio is playing<span>.</span><span>.</span><span>.</span>
+                  </p>
+                </div>
+              </div>
+              <div class="overlay hide">
+                <div class="browser-not-supporting-audio-recording-box">
+                  <p>
+                    To record audio, use browsers like Chrome and Firefox that
+                    support audio recording.
+                  </p>
+                  <button type="button" class="close-browser-not-supported-box">
+                    Ok.
+                  </button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
+        <!--  -->
+
+        <audio controls class="audio-element hide"></audio>
+        <!--  -->
         <div
-          class="col-lg-6 col-md-12 col-12 shadow-lg p-3 mb-5 bg-white rounded d-flex justify-content-center align-items-center"
+          class="col-lg-6 col-md-12 col-12 shadow-lg p-3 mb-5 bg-white rounded d-flex flex-row justify-content-center align-items-center"
         >
-          <div class="header-image">
-            <img
-              id="imageWidget"
-              src="/static//images/up_icon.png"
-              alt=""
-              style="width: 400px; height: 400px"
-            />
+          <div
+            style="
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+            "
+          >
+            <div class="header-image">
+              <img
+                id="imageWidget"
+                src="/static//images/plc2.png"
+                alt=""
+                style="width: 320px; height: 250px"
+              />
+            </div>
+            <h4 id="caption">Spectrogram</h4>
           </div>
         </div>
       </div>
@@ -106,6 +176,7 @@
     <!-- End header Area -->
 
     <!--====== js ======-->
+    <script src="/static/js/audio-recorder.js"></script>
     <script src="/static/js/bootstrap.bundle.min.js"></script>
     <script src="/static/js/main.js"></script>
 
